[tool.poetry]
name = "lego-stock-checker"
version = "0.1.0"
description = ""
authors = ["David Grant <davidgrant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
schedule = "^0.6.0"
twilio = "^6.48.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
